# Numerical

./: .gitignore  LICENSE  README.md
Source/: Abscissae.h  AbscissaeFromData.h  CMakeLists.txt  ClenshawCurtis.h  Constants.h  EigenLegendreConstants.h  FiniteDifference.h  GaussKronrodConstants.h  GaussKronrodRules.h  GenerateData.cpp  GenerateLegendreCoeffs.h  Integral.h  LegendreConstants.h  Linspace.h  Roots.h  TestFiniteDifference.cpp  TestFiniteDifference2D.cpp  TestIntegration.cpp  TestMain.cpp  TestRootFinding.cpp  WriteVector.h  linspace.h  main.cpp  valarray2vector.h
Source/CudaFiniteDifference/: CMakeLists.txt  DeviceMemory.cuh  FiniteDifference2D.cu  FiniteDifference2D.cuh  MemoryManagerFiniteDifference2D.cu  MemoryManagerFiniteDifference2D.cuh  RunFiniteDifference2D.cu  RunFiniteDifference2D.h
